@@ -1,5 +1,6 @@
 0.09	- 2012-09-16, H.Merijn Brand
     * POD change to satisfy modern pod-checkers
+    * This module will be handed over to the libgnokii development team
     * Upped copyright to 2013
 
 0.08	- 2012-04-04, H.Merijn Brand
